# translate-agent

./: .gitignore  Makefile  README.md  pyproject.toml
src/: agent.py  retry_with_backoff.py  translate_by_deepseek.py  translate_by_gemini.py
tests/: test_agent.py
tests/fixtures/: built-multi-agent-research-system.md  built-multi-agent-research-system_zh_CN_t_by_claude.md  built-multi-agent-research-system_zh_CN_t_by_deepseek_r1.md
